# lua-xlib

./: .busted.lua  .fdignore  .gitignore  .luacheckrc  CHANGELOG.adoc  CMakeLists.txt  Justfile  Makefile  README.adoc  bors.toml  index.html
.github/workflows/: ci.yml  deploy-to-pages.yml
doc/: config.ld
doc/pages/: randr.md
modules/: xlib.html  xrandr.html
rocks/: lua-xlib-scm-3.rockspec
spec/: xlib_spec.lua
src/xlib/: lua_util.c  lua_util.h  xlib.c  xlib.h  xrandr.c  xrandr.h
topics/: randr.md.html
